# oauth-mastery-spring-fastapi

./: .gitignore  docker-compose.yml  docs.md
client-webapp/: .env  docker-compose.yml  pyproject.toml  run_server.py  setup-db.sql
client-webapp/app/: database.py  main.py  models.py  settings.py
client-webapp/app/entities/: __init__.py  auth_identity.py  user.py
client-webapp/app/models/: base.py  signup_form.py  user_creation.py  user_login
client-webapp/app/repositories/: __init__.py  auth_identity_repository.py  user_repository.py
client-webapp/app/routes/: hello_world.py  sign_up_route.py  user_creation_route.py
client-webapp/app/services/: sign_up_service.py  user_creation_service.py
client-webapp/app/utilities/: async_task.py  database.py  dependencies.py  hashing.py
client-webapp/db_init/: 01_create_schema.sql
client-webapp/tests/: test_database.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: .placeholder
frontend/src/layouts/: MainLayout.jsx
frontend/src/pages/: ChangeGreetingPage.jsx  ChangePasswordPage.jsx  HomePage.jsx  LandingPage.jsx  LinkSocialPage.jsx  LoginPage.jsx  PreferencesPage.jsx  SignupPage.jsx  VerifyEmailPage.jsx
frontend/src/routes/: AppRouter.jsx
hello-service/: pom.xml
hello-service/src/main/java/en93/hello_service/: HelloServiceApplication.java
hello-service/src/test/java/en93/hello_service/: HelloServiceApplicationTests.java
